idf_component_register(SRCS "main.c"
                            "src/wifi_manager.c"
                            "src/led_manager.c"
                            "src/mqtt_manager.c"
                            "src/system_init.c"
                            "src/telnet_logger.c"
                    INCLUDE_DIRS "include")