idf_component_register(SRCS "main.c"
                            "src/wifi_manager.c"
                            "src/led_manager.c"
                            "src/mqtt_manager.c"
                            "src/system_init.c"
                            "src/telnet_logger.c"
                            "src/dht11_manager.c"
                            "src/adc_scanner.c"
                            "src/hygrometer_manager.c"
                            "src/mqtt_publisher.c"
                    INCLUDE_DIRS "include"
                    REQUIRES json esp_netif esp_wifi nvs_flash mqtt driver esp_adc lwip freertos)